<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:visibility="gone"
        android:text="@string/shape"
        android:id="@+id/b_click"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_box"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView

        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="30dp"
        android:paddingVertical="40dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/tv_number"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_operation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.gray"
                android:onClick="onOperationClick"
                android:text="@string/ac"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.gray"
                android:layout_marginHorizontal="16dp"
                android:onClick="onOperationClick"
                android:text="@string/plusminus"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.gray"
                android:layout_marginEnd="16dp"
                android:onClick="onOperationClick"
                android:text="@string/procent"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.orange"
                android:onClick="onOperationClick"
                android:text="@string/delit"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:onClick="onNumberClick"
                android:text="@string/seven"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/eight"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/nine"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.orange"
                android:onClick="onOperationClick"
                android:text="@string/umnojit"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:onClick="onNumberClick"
                android:text="@string/four"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/five"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/six"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.orange"
                android:onClick="onOperationClick"
                android:text="@string/minus"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:onClick="onNumberClick"
                android:text="@string/one"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/two"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/three"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.orange"
                android:onClick="onOperationClick"
                android:text="@string/plus"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton

                style="@style/button.0"
                android:onClick="onNumberClick"
                android:text="@string/zero"
                android:textAlignment="textStart"
                app:backgroundTint="@color/dark_black"
                tools:ignore="UsingOnClickInXml" />


            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark_black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="onNumberClick"
                android:text="@string/tochka"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEqual"
                style="@style/Button.orange"
                android:onClick="onOperationClick"
                android:text="@string/rovno"
                tools:ignore="UsingOnClickInXml" />


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>