<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white3"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_polic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/policies"
        android:textColor="@color/sinii"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_policy" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/et_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:gravity="start"
        android:paddingVertical="13dp"
        android:text="@string/policy"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/et_proKat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:gravity="start"
        android:paddingVertical="13dp"
        android:text="@string/product_category"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toTopOf="@+id/et_policy" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/et_origCo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:gravity="start"
        android:paddingVertical="13dp"
        android:text="@string/origin_country"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toTopOf="@+id/et_proKat" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:gravity="start"
        android:paddingVertical="13dp"
        android:text="@string/brand"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toTopOf="@+id/et_origCo" />


    <TextView
        android:id="@+id/tv_curPo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/current_policies"
        android:textColor="@color/jjjj"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_brand" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="85dp"
        android:paddingVertical="20sp"
        android:onClick="finishClick"
        android:text="@string/finish_all_activity"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:cornerRadius="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_curPo"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>